Fixed comboBox alignment

--- a/src/main/resources/styles/styles.css
+++ b/src/main/resources/styles/styles.css
@@ -10,12 +10,14 @@
 .controller:pressed {
     -fx-background-color: #249C17;
 }
+
 .label{
     -fx-text-fill: white;
     -fx-font-size: 20px;
     -fx-font-family: sans-serif;
     -fx-font-weight: bold;
 }
+
 .combo-box{
     -fx-background-color: #4eb543;
     -fx-background-radius: 15px;
@@ -26,6 +28,7 @@
     -fx-font-family: sans-serif;
     -fx-font-weight: bold;
     -fx-text-fill: white;
+    -fx-alignment: center;
 }
 
 .combo-box .arrow-button {
